force-app/main/default/objects/LoanApplicationProperty/fields/Address_Details__c.field-meta.xml
<CustomField>
    <fullName>Address_Details__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Property_Domain</complianceGroup>
    <description>Address of the property, because std address field cannot be displayed on related list</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Address Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>