force-app/main/default/objects/LoanApplicationProperty/fields/Bathrooms__c.field-meta.xml
<CustomField>
    <fullName>Bathrooms__c</fullName>
    <description>Number of bathrooms in the property</description>
    <label>Bathrooms</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>