force-app/main/default/objects/LoanApplicationProperty/fields/Carparks__c.field-meta.xml
<CustomField>
    <fullName>Carparks__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Loan_Domain</complianceGroup>
    <description>Number of car park spaces assigned to the property</description>
    <label>Carparks</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>