force-app/main/default/objects/LoanApplicationProperty/fields/Collateral_Assessment_Enquiry_Type__c.field-meta.xml
<CustomField>
    <fullName>Collateral_Assessment_Enquiry_Type__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Property_Domain</complianceGroup>
    <description>Type of Assessment</description>
    <label>Collateral Assessment Enquiry Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>COLLATERAL_ASSESSMENT_ENQUIRY_TYPE_EXPLORE</fullName>
                <label>Explore</label>
            </value>
            <value>
                <fullName>COLLATERAL_ASSESSMENT_ENQUIRY_TYPE_APPLICATION</fullName>
                <label>Application</label>
            </value>
            <value>
                <fullName>COLLATERAL_ASSESSMENT_ENQUIRY_TYPE_ADHOC</fullName>
                <label>Adhoc</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>