force-app/main/default/objects/LoanApplicationProperty/fields/Collateral_Assessment_Expiry_Time__c.field-meta.xml
<CustomField>
    <fullName>Collateral_Assessment_Expiry_Time__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - Property Domain</complianceGroup>
    <description>The date this collateral decision is valid until.  If this date is exceeded, and the application is not fully approved, a new collateral decision will be required.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This is the date and time the Collateral Assessment is valid until. If this date is exceeded then a new Collateral Assessment is required.</inlineHelpText>
    <label>Collateral Assessment Expiry Time</label>
    <type>DateTime</type>
</CustomField>