force-app/main/default/objects/LoanApplicationProperty/fields/Collateral_Assessment_ID__c.field-meta.xml
<CustomField>
    <fullName>Collateral_Assessment_ID__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Property_Domain</complianceGroup>
    <description>Assessment Id this property is associated with</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Collateral Assessment ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>