force-app/main/default/objects/LoanApplicationProperty/fields/Collateral_Assessment_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Collateral_Assessment_Outcome__c</fullName>
    <complianceGroup>Integrity - Trusted;Privacy - Personal Information;Source - Property Domain</complianceGroup>
    <description>This is the overall collateral decision</description>
    <inlineHelpText>This is the overall Collateral Assessment decision and can be any of the following;
Blank
Approved
Declined
Referred
Approved Subject To</inlineHelpText>
    <label>Collateral Assessment Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>COLLATERAL_ASSESSMENT_OUTCOME_APPROVED</fullName>
                <label>Approved</label>
            </value>
            <value>
                <fullName>COLLATERAL_ASSESSMENT_OUTCOME_DECLINED</fullName>
                <label>Declined</label>
            </value>
            <value>
                <fullName>COLLATERAL_ASSESSMENT_OUTCOME_REFERRED</fullName>
                <label>Referred</label>
            </value>
            <value>
                <fullName>COLLATERAL_ASSESSMENT_OUTCOME_APPROVED_SUBJECT_TO</fullName>
                <label>Approved Subject To</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>