force-app/main/default/objects/LoanApplicationProperty/fields/Collateral_Assessment_Time__c.field-meta.xml
<CustomField>
    <fullName>Collateral_Assessment_Time__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Property_Domain</complianceGroup>
    <description>Created Time of Collateral Assessment</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Collateral Assessment Time</label>
    <type>DateTime</type>
</CustomField>