force-app/main/default/objects/LoanApplicationProperty/fields/Floor_Area__c.field-meta.xml
<CustomField>
    <fullName>Floor_Area__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - Loan Domain</complianceGroup>
    <description>Area of the property taken up by a building or part of it</description>
    <label>Floor Area (m2)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>