force-app/main/default/objects/LoanApplicationProperty/fields/Forecast_Standard_Deviation__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Standard_Deviation__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Property_Domain</complianceGroup>
    <description>Confidence Rating of AVM , accepted deviation is  between 0.1-0.14. Any value above it signify manual valuation is needed</description>
    <label>Forecast Standard Deviation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>