force-app/main/default/objects/LoanApplicationProperty/fields/Image_Link__c.field-meta.xml
<CustomField>
    <fullName>Image_Link__c</fullName>
    <description>Image reference to high resolution of a property&apos;s image</description>
    <label>Image Link</label>
    <type>Url</type>
</CustomField>