force-app/main/default/objects/LoanApplicationProperty/fields/Ineligible_Reasons__c.field-meta.xml
<CustomField>
    <fullName>Ineligible_Reasons__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - Salesforce</complianceGroup>
    <description>This field is to copy over the Ineligible reason Multi select picklist value onto a Text formula field on property.</description>
    <formula>IF ( INCLUDES ( LoanApplication.Ineligible_Reasons__c , &quot;INELIGIBLE_REASON_PROPERTY_INELIGIBLE&quot; ), &quot;Ineligible due to property. See Property tab; &quot;,null )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ineligible Reasons</label>
    <type>Text</type>
</CustomField>