force-app/main/default/objects/LoanApplicationProperty/fields/Land_Area__c.field-meta.xml
<CustomField>
    <fullName>Land_Area__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - Loan Domain</complianceGroup>
    <description>Total land area of a property</description>
    <label>Land Area (m2)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>