force-app/main/default/objects/LoanApplicationProperty/fields/Maximum_Allowable_LVR__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Allowable_LVR__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - Property Domain</complianceGroup>
    <description>The maximum LVR that can be supported by the collateral assessment.</description>
    <inlineHelpText>This is the maximum allowable Loan to Value Ratio a customer can borrow against a property.</inlineHelpText>
    <label>Maximum Allowable LVR</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>