force-app/main/default/objects/LoanApplicationProperty/fields/Maximum_Lending_Amount__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Lending_Amount__c</fullName>
    <complianceGroup>Integrity - Trusted;Privacy - Non Personal Information;Source - Property Domain</complianceGroup>
    <description>The maximum amount that can be lent against a collateral</description>
    <inlineHelpText>Important - this amount won&apos;t always be the maximum amount ANZ will lend to the customer.  The maximum amount may be less than this.</inlineHelpText>
    <label>Maximum Lending Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>