force-app/main/default/objects/LoanApplicationProperty/fields/Primary_Valuation_Type__c.field-meta.xml
<CustomField>
    <fullName>Primary_Valuation_Type__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Loan_Domain</complianceGroup>
    <description>Indicator to determine if the valuation is an automated valuation or a manual/full valuation (data type decided by Credit domain (Gearbox))</description>
    <label>Primary Valuation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AVM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>