force-app/main/default/objects/LoanApplicationProperty/fields/Property_ID__c.field-meta.xml
<CustomField>
    <fullName>Property_ID__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - Loan Domain</complianceGroup>
    <description>Unique identifier for every property</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <inlineHelpText>This is the Unique Property ID utilised by PBS generated from Property Address</inlineHelpText>
    <label>Property ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>