force-app/main/default/objects/LoanApplicationProperty/fields/Property_Risk_Code__c.field-meta.xml
<CustomField>
    <fullName>Property_Risk_Code__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - Property Domain</complianceGroup>
    <description>This is the credit risk classification code for the property</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This is the credit risk classification code for the property.</inlineHelpText>
    <label>Property Risk Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>