force-app/main/default/objects/LoanApplicationProperty/fields/Property_Risk_Description__c.field-meta.xml
<CustomField>
    <fullName>Property_Risk_Description__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Property_Domain</complianceGroup>
    <description>The description of the credit risk classification code</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Property Risk Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>