force-app/main/default/objects/LoanApplicationProperty/fields/Property_Status__c.field-meta.xml
<CustomField>
    <fullName>Property_Status__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Loan_Domain</complianceGroup>
    <description>The status of the property if it&apos;s on market  (from Corelogic) - for example private sale, auction etc.</description>
    <label>Property Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Private Sale</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>