force-app/main/default/objects/LoanApplicationProperty/fields/Property_Subtype__c.field-meta.xml
<CustomField>
    <fullName>Property_Subtype__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Property_Domain</complianceGroup>
    <description>Subtype of property</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Property Subtype</label>
    <length>255</length>
    <type>Text</type>
</CustomField>