force-app/main/default/objects/LoanApplicationProperty/fields/Property_Type__c.field-meta.xml
<CustomField>
    <fullName>Property_Type__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source_Property_Domain</complianceGroup>
    <description>Type of Property</description>
    <label>Property Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>FULLY_DETACHED_HOUSE</fullName>
                <label>House</label>
            </value>
            <value>
                <fullName>DUPLEX</fullName>
                <label>Duplex</label>
            </value>
            <value>
                <fullName>APARTMENT</fullName>
                <label>Apartment / Unit</label>
            </value>
            <value>
                <fullName>APT_BUILDING</fullName>
                <label>Apartment Building</label>
            </value>
            <value>
                <fullName>BEDSITTER_BACH_STUDIO</fullName>
                <label>Bedsitter, Bachelor or Studio Apartments</label>
            </value>
            <value>
                <fullName>BLOCK_OF_UNITS_FLATS</fullName>
                <label>Block of Units / Flats</label>
            </value>
            <value>
                <fullName>MULTI_DWELL_DEV</fullName>
                <label>Multi-Dwelling Single Title</label>
            </value>
            <value>
                <fullName>RETIREMENT_VLGE_UNIT</fullName>
                <label>Retirement Village Unit</label>
            </value>
            <value>
                <fullName>RETIREMENT_VILLAGE</fullName>
                <label>Retirement Village</label>
            </value>
            <value>
                <fullName>SERVICED_APT</fullName>
                <label>Serviced Apartment</label>
            </value>
            <value>
                <fullName>STUDENT_APT_BUILDING</fullName>
                <label>Student Apartment Building</label>
            </value>
            <value>
                <fullName>STUDENT_APT</fullName>
                <label>Student Apartment</label>
            </value>
            <value>
                <fullName>UNIT</fullName>
                <label>Unit / Flat</label>
            </value>
            <value>
                <fullName>TOWNHOUSE</fullName>
                <label>Townhouse</label>
            </value>
            <value>
                <fullName>WAREHOUSE_APARTMENT</fullName>
                <label>Warehouse Apartment</label>
            </value>
            <value>
                <fullName>HTL_MTL_RDEVELOPMENT</fullName>
                <label>Hotel/Motel Re-development</label>
            </value>
            <value>
                <fullName>VACANT_LAND</fullName>
                <label>Vacant Land</label>
            </value>
            <value>
                <fullName>ENGLOBO_LAND</fullName>
                <label>Englobo Land</label>
            </value>
            <value>
                <fullName>COMMERCIAL</fullName>
                <label>Commercial Property</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>