force-app/main/default/objects/LoanApplicationProperty/fields/Property_Valuation_Type__c.field-meta.xml
<CustomField>
    <fullName>Property_Valuation_Type__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - Property Domain</complianceGroup>
    <description>Type of valuation</description>
    <label>Property Valuation Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>VALUATION_TYPE_FVS</fullName>
                <label>Full Valuation Short form</label>
            </value>
            <value>
                <fullName>VALUATION_TYPE_DTV</fullName>
                <label>Desktop</label>
            </value>
            <value>
                <fullName>VALUATION_TYPE_AVM</fullName>
                <label>Automated</label>
            </value>
            <value>
                <fullName>VALUATION_TYPE_CAVM</fullName>
                <label>Combined AVM</label>
            </value>
            <value>
                <fullName>VALUATION_TYPE_COS</fullName>
                <label>Contract of sale</label>
            </value>
            <value>
                <fullName>VALUATION_TYPE_TOC</fullName>
                <label>Tentative on Completion</label>
            </value>
            <value>
                <fullName>VALUATION_TYPE_RAV</fullName>
                <label>Kerbside</label>
            </value>
            <value>
                <fullName>VALUATION_TYPE_FVL</fullName>
                <label>Full valuation Long form (professional)</label>
            </value>
            <value>
                <fullName>VALUATION_TYPE_CSV</fullName>
                <label>Customer Stated Value</label>
            </value>
            <value>
                <fullName>VALUATION_TYPE_PE</fullName>
                <label>Price Estimate</label>
            </value>
            <value>
                <fullName>VALUATION_TYPE_UNSPECIFIED</fullName>
                <label>Not supported</label>
            </value>
            <value>
                <fullName>VALUATION_TYPE_CPI</fullName>
                <label>Construction - Progress Inspection</label>
            </value>
            <value>
                <fullName>VALUATION_TYPE_CFI</fullName>
                <label>Construction - Final Inspection</label>
            </value>
            <value>
                <fullName>VALUATION_TYPE_RMA</fullName>
                <label>Remote Valuation Assessment</label>
            </value>
            <value>
                <fullName>VALUATION_TYPE_NA</fullName>
                <label>Unable to determine a Fair Market Value</label>
            </value>
            <value>
                <fullName>VALUATION_TYPE_CVL</fullName>
                <label>Current Valuation - Manual valuation up to 90 days old</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>