force-app/main/default/objects/LoanApplicationProperty/fields/Property_Value__c.field-meta.xml
<CustomField>
    <fullName>Property_Value__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Property_Domain</complianceGroup>
    <description>Fair Market Value from loan domain determined by the collateral assessment policy</description>
    <label>Property Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>