force-app/main/default/objects/LoanApplicationProperty/fields/Property_Version__c.field-meta.xml
<CustomField>
    <fullName>Property_Version__c</fullName>
    <description>The version of the property on which the assessment was done. This is part of the composite identifier of the property record</description>
    <label>Property Version</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>