force-app/main/default/objects/LoanApplicationProperty/fields/Risk_Description__c.field-meta.xml
<CustomField>
    <fullName>Risk_Description__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Loan_Domain</complianceGroup>
    <description>The detailed description of the property risk type code</description>
    <label>Risk Description</label>
    <type>TextArea</type>
</CustomField>