force-app/main/default/objects/LoanApplicationProperty/fields/Risk_Type__c.field-meta.xml
<CustomField>
    <fullName>Risk_Type__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Loan_Domain</complianceGroup>
    <description>This is the credit risk classification associated with the property as determined by the collateral assessment policy</description>
    <label>Risk Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CSTD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>