force-app/main/default/objects/LoanApplicationProperty/fields/Supporting_Valuation_Type__c.field-meta.xml
<CustomField>
    <fullName>Supporting_Valuation_Type__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Loan_Domain</complianceGroup>
    <description>External valuation type utilised to confirm the customer or ANZ valuation if required</description>
    <label>Supporting Valuation Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AVM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>