force-app/main/default/objects/LoanApplicationProperty/fields/Year_Built__c.field-meta.xml
<CustomField>
    <fullName>Year_Built__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Loan_Domain</complianceGroup>
    <description>Built up year of the Property</description>
    <label>Year Built</label>
    <length>10</length>
    <type>Text</type>
</CustomField>